--- a/apihunter-project/src/App.css
+++ b/apihunter-project/src/App.css
@@ -1,19 +1,19 @@
-div{
+.main{
     width: 100%;
     height: 100vh;
     background: url("https://cdn.pixabay.com/photo/2016/06/03/12/42/popcorn-1433327_1280.jpg");
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-size: cover;
     background-repeat: no-repeat;
-
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 form{
     width: 600px;
-    height: 490px;
+    height: 500px;
     color: black;
     box-shadow: 1px 1px 15px 1px lightgray;
 }
+
 
